--- a/app/templates/admin/pages/users/edit_user.html
+++ b/app/templates/admin/pages/users/edit_user.html
@@ -34,25 +34,28 @@
           </div>
           {%endfor%}
           <form action="{{url_for('.edit_user', user_id=user_profile.id)}}" method="post">
+            <label for="">Full Name</label>
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Full name" value="{{user_profile.name}}" name="full_name" readonly>
+              <input type="text" class="form-control" placeholder="Full name" value="{{user_profile.name}}" name="full_name" minlength="5">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-user"></span>
                 </div>
               </div>
             </div>
+            <label for="">Email</label>
             <div class="input-group mb-3">
-              <input type="email" class="form-control" placeholder="Email" value="{{user_profile.email}}" name="email" readonly>
+              <input type="email" class="form-control" placeholder="Email" value="{{user_profile.email}}" name="email">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-envelope"></span>
                 </div>
               </div>
             </div>
+            <label for="">Username</label>
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Username" value="{{user_profile.username}}" name="username" minlength="5"
-                maxlength="10" readonly>
+                maxlength="10">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-user-circle"></span>
@@ -60,10 +63,11 @@
               </div>
             </div>
             <div class="form-group">
+              <label for="">Role</label>
               <select class="form-control custom-select" name="role">
                 {% for role in roles %}
                 {%if role.id==user_profile.role_id%}
-                <option value={{role.id}} selected disabled>{{role.name}}</option>
+                <option value={{role.id}} selected>{{role.name}}</option>
                 {%else%}
                 <option value={{role.id}}>{{role.name}}</option>
                 {%endif%}
