cleaned code to remove bugs and redundant files

--- a/app/templates/admin/pages/kitchen/kitchen.html
+++ b/app/templates/admin/pages/kitchen/kitchen.html
@@ -51,7 +51,7 @@
                         {%if items.count()==0 %}
                         <h1 class="row justify-content-center">No Items Created</h1>
                         {%else%}
-                        <div class="table-responsive">
+                        <div class="tale-responsive">
                             <table id="table1" class="table table-hover table-striped">
                                 <thead>
                                     <tr>
