--- a/app/templates/admin/pages/mailbox/inbox.html
+++ b/app/templates/admin/pages/mailbox/inbox.html
@@ -90,7 +90,7 @@
         {%if in_messages.total==0 %}
               <h1 class="row justify-content-center">Empty Inbox</h1>
           {%else%}
-        <div class="table-responsive mailbox-messages">
+        <div class="tale-responsive mailbox-messages">
           
           <table id="table1" class="table table-hover table-striped">
             <thead>
