--- a/app/templates/admin/pages/mailbox/sent_mail.html
+++ b/app/templates/admin/pages/mailbox/sent_mail.html
@@ -92,7 +92,7 @@
           {%if out_messages.total==0 %}
               <h1 class="row justify-content-center">Empty Outbox</h1>
               {%else%}
-        <div class="table-responsive mailbox-messages">
+        <div class="tabe-responsive mailbox-messages">
           <table id="table1" class="table table-hover table-striped">
             <thead>
               <tr>
