--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -93,7 +93,7 @@
                             happen.</p>
                         <ul class="list-unstyled">
                             <li><i class="fa fa-map-marker"></i> No. 3, Bronby Lane, Oxford, UK</li>
-                            <li class="number"><i class="fa fa-phone"></i> (+44) 8035784489</li>
+                            <li class="number"><i class="fa fa-phone"></i> (+44) 7215035784489</li>
                             <li><i class="fa fa-envelope"></i> info@CherishCare.com</li>
                         </ul>
                         <div class="visible-xs-block visible-sm-block pt20"></div>
@@ -116,38 +116,23 @@
                             title="Photo Gallery 4">
                             <img src="{{url_for('static', filename='assets/img/gall4.jpg')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall5.jpg')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall5.png')}}" class="gallery"
                             title="Photo Gallery 5">
-                            <img src="{{url_for('static', filename='assets/img/gall5.jpg')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall5.png')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall6.jpg')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall6.png')}}" class="gallery"
                             title="Photo Gallery 6">
-                            <img src="{{url_for('static', filename='assets/img/gall6.jpg')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall6.png')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall7.jpg')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall7.png')}}" class="gallery"
                             title="Photo Gallery 7">
-                            <img src="{{url_for('static', filename='assets/img/gall7.jpg')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall7.png')}}" alt="Gallery thumbnail">
                         </a>
                         <a href="{{url_for('static', filename='assets/img/gall8.jpg')}}" class="gallery"
                             title="Photo Gallery 8">
                             <img src="{{url_for('static', filename='assets/img/gall8.jpg')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall9.jpg')}}" class="gallery"
-                            title="Photo Gallery 9">
-                            <img src="{{url_for('static', filename='assets/img/gall9.jpg')}}" alt="Gallery thumbnail">
-                        </a>
-                        <a href="{{url_for('static', filename='assets/img/gall10.jpg')}}" class="gallery"
-                            title="Photo Gallery 10">
-                            <img src="{{url_for('static', filename='assets/img/gall10.jpg')}}" alt="Gallery thumbnail">
-                        </a>
-                        <a href="{{url_for('static', filename='assets/img/gall1.jpg')}}" class="gallery"
-                            title="Photo Gallery 11">
-                            <img src="{{url_for('static', filename='assets/img/gall1.jpg')}}" alt="Gallery thumbnail">
-                        </a>
-                        <a href="{{url_for('static', filename='assets/img/gall2.jpg')}}" class="gallery"
-                            title="Photo Gallery 12">
-                            <img src="{{url_for('static', filename='assets/img/gall2.jpg')}}" alt="Gallery thumbnail">
-                        </a>
+                        
                         <div class="visible-xs-block visible-sm-block pt20"></div>
                     </div>
                     <div class="footer-widget col-sm-6 col-md-4">
