--- a/app/templates/admin/pages/mailbox/trash.html
+++ b/app/templates/admin/pages/mailbox/trash.html
@@ -93,7 +93,7 @@
         <h1 class="row justify-content-center">Trash folder is empty</h1>
         </th>
         {%else%}
-        <div class="table-responsive mailbox-messages">
+        <div class="tale-responsive mailbox-messages">
           <table id="table1" class="table table-hover table-striped">
             <thead>
               <tr>
