--- a/app/templates/admin/pages/users/view.html
+++ b/app/templates/admin/pages/users/view.html
@@ -34,7 +34,7 @@
     </div>
     <div class="card-body">
       
-      <div class="table-responsive">
+      <div class="tabe-responsive">
         <table id="table1" class="table table-striped projects">
           <thead>
             <tr>
@@ -56,7 +56,6 @@
           </thead>
           <tbody>
             {%for user in users.items %}
-            {{user.name}}
             <tr>
               <td>
                 <a>
@@ -79,7 +78,7 @@
                   {%else%}
                   <span class="badge badge-success">
                     {%endif%}
-                    {{user.confirmed}}</span>
+                    {{user.active}}</span>
 
               </td>
               <td class="project-actions text-right">
