updated imagge extensions in home

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -116,17 +116,17 @@
                             title="Photo Gallery 4">
                             <img src="{{url_for('static', filename='assets/img/gall4.jpg')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall5.png')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall5.jpg')}}" class="gallery"
                             title="Photo Gallery 5">
-                            <img src="{{url_for('static', filename='assets/img/gall5.png')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall5.jpg')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall6.png')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall6.jpg')}}" class="gallery"
                             title="Photo Gallery 6">
-                            <img src="{{url_for('static', filename='assets/img/gall6.png')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall6.jpg')}}" alt="Gallery thumbnail">
                         </a>
-                        <a href="{{url_for('static', filename='assets/img/gall7.png')}}" class="gallery"
+                        <a href="{{url_for('static', filename='assets/img/gall7.jpg')}}" class="gallery"
                             title="Photo Gallery 7">
-                            <img src="{{url_for('static', filename='assets/img/gall7.png')}}" alt="Gallery thumbnail">
+                            <img src="{{url_for('static', filename='assets/img/gall7.jpg')}}" alt="Gallery thumbnail">
                         </a>
                         <a href="{{url_for('static', filename='assets/img/gall8.jpg')}}" class="gallery"
                             title="Photo Gallery 8">
