--- a/app/templates/admin/pages/kitchen/kitchen.html
+++ b/app/templates/admin/pages/kitchen/kitchen.html
@@ -144,7 +144,7 @@
                                 id="na" min="0" value="0.00" step=".01" required>
                         </div>
                     </div>
-                    <label for="location">Item Location</label>\
+                    <label for="location">Item Location</label>
                     <div class="row">
                         <div class="form-group col-sm-12">
                             <input type="text" class="form-control" name="location" placeholder="location" id="na"
