--- a/app/templates/admin/pages/residents/view_resident_profile.html
+++ b/app/templates/admin/pages/residents/view_resident_profile.html
@@ -70,8 +70,8 @@
 
                             <div class="row">
                                 <div class="col-sm-6"><a
-                                        href="{{url_for('static', filename='uploads/')}}{{resident.care_plan}}"
-                                        class="btn-link text-secondary" download="Care Plan"><i
+                                        href="{{url_for('static', filename='uploads/pdf/')}}{{resident.care_plan}}"
+                                        class="btn-link text-secondary" download><i
                                             class="far fa-fw fa-file-pdf"></i> Care
                                         Plan</a>
                                 </div>
